--- a/teamcss.css
+++ b/teamcss.css
@@ -94,10 +94,13 @@ a {
     z-index: 9;
     min-height: 100vh;
 }
-
+.p{
+    color:red;
+}
 .title-banner1 {
     background-image: url('IMAGES/15-banner1024x586.jpg');
-    
+    color: #fff;
+    border: red;
 }
 .title-banner2 {
     background-image: url('IMAGES/GADC1.png');
