--- a/teamcss.css
+++ b/teamcss.css
@@ -950,7 +950,7 @@ text-align:justify;
 
 .team-footer
 .team-footer-banner{
-    background-color:lightgray;
+    background-color:#444444;
 
 }
 /* .team-footer-bg-color{
