--- a/navigation-barcss.1.css
+++ b/navigation-barcss.1.css
@@ -75,7 +75,12 @@ a.logo-sm.bushra-brand
     width: 50px;
     height: 50px;
 } */
-
+.navbar-brand img{
+    background-color: gray;
+    padding: 2px;
+    box-shadow: 1px 1px 2px #FFF;
+    margin-left: 30px;
+}
 
 .logoboth {
     display: inline-block;
