--- a/navigation-barcss.1.css
+++ b/navigation-barcss.1.css
@@ -81,6 +81,12 @@ a.logo-sm.bushra-brand
     box-shadow: 1px 1px 2px #FFF;
     margin-left: 30px;
 }
+.logo-sm{
+    background-color: gray;
+    padding: 2px;
+    box-shadow: 1px 1px 2px #FFF;
+    margin-left: 30px;
+}
 
 .logoboth {
     display: inline-block;
