--- a/navigation-barcss.1.css
+++ b/navigation-barcss.1.css
@@ -81,7 +81,7 @@ a.logo-sm.bushra-brand
     box-shadow: 1px 1px 2px #FFF;
     margin-left: 30px;
 }
-.logo-sm{
+.logo-sm img{
     background-color: gray;
     padding: 2px;
     box-shadow: 1px 1px 2px #FFF;
