--- a/navigation-barcss.1.css
+++ b/navigation-barcss.1.css
@@ -85,7 +85,8 @@ a.logo-sm.bushra-brand
     background-color: gray;
     padding: 2px;
     box-shadow: 1px 1px 2px #FFF;
-    margin-left: 30px;
+    margin-left: 10px;
+    margin-top: 5px;
 }
 
 .logoboth {
