--- a/aboutus.css
+++ b/aboutus.css
@@ -1,6 +1,6 @@
-﻿.margin-top-section{
+﻿/* .margin-top-section{
     margin-top:60px;
-}
+} */
 body {
     font-family: "Gotham SSm A", "Gotham SSm B";
     font-style: normal;
