--- a/index-style.css
+++ b/index-style.css
@@ -1,10 +1,13 @@
 ﻿
-/* h1 {    font-size: 5.8vmin;}
-h2 {    font-size: 4.8vmin;}
-h3 {    font-size: 4.2vmin;}
-h4 {    font-size: 3.0vmin;}
-h5 {    font-size: 2.8vmin;}
-h6 {    font-size: 2.6vmin} */
+ h1 {    font-size:6.8vmin;}
+h2 {    font-size: 5.8vmin;}
+h3 {    font-size: 4.8vmin;}
+h4 {    font-size: 3.8vmin;}
+h5 {    font-size: 3.6vmin;}
+h6 {    font-size: 3.3vmin} 
+p {    font-size: 3vmin;} 
+a {    font-size: 3vmin;} 
+ul li {    font-size: 3.8vmin;} 
 
 h1,h2,h3,h4,h5,h6 {
     margin: 0 0 30px;
