--- a/aboutus.css
+++ b/aboutus.css
@@ -29,8 +29,11 @@ body {
     }
 
     .approach-part2-detail img {
-        width: 13vw;
-        height: 13vw;
+        width: 39vmin;
+        height: 39vmin;
+        box-shadow: 1px 1px 4px #444444;
+        /* border: 4px solid red; */
+    
     }
 
         .approach-part2-detail img:hover {
@@ -39,13 +42,15 @@ body {
 
     .approach-part2-detail figcaption {
         text-align: center;
-        color: blue;
+        color: #444444;
+        font-size: 3.2vmin
+
     }
 
 .approach-part2-detail-1-text {
     text-align: justify;
     font-size:17px;
-    border-right: 1px solid gray;
+    border-right: 1px solid red;
     padding: 3px 10px;
 }
 
