--- a/teamcss.css
+++ b/teamcss.css
@@ -595,7 +595,7 @@ ul.team-part4-ul li {
         margin-bottom: 20px;
         letter-spacing: .5px;
         line-height: 1.2em;
-        font-family: AvantGardeGothicITCW01XLt;
+        /* font-family: AvantGardeGothicITCW01XLt; */
         /*text-transform: uppercase;*/
     }
 
