--- a/index-style.css
+++ b/index-style.css
@@ -7,14 +7,14 @@ h5 {    font-size: 3.6vmin;}
 h6 {    font-size: 3.3vmin} 
 p {    font-size: 3vmin;} 
 a {    font-size: 3vmin;} 
-ul li {    font-size: 2.9vmin;} 
+ul li {    font-size: 2.5vmin;} 
 
 h1,h2,h3,h4,h5,h6 {
     margin: 0 0 30px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    color: #444;
-    line-height: 1em;
+    /* font-family: 'Roboto', sans-serif; */
+    /* font-weight: 400; */
+    color: #444444;
+    /* line-height: 1em; */
 }
 h1.h-xlight, h2.h-xlight, h3.h-xlight, h4.h-xlight, h5.h-xlight, h6.h-xlight {
             font-weight: 100;
