--- a/indexcss.css
+++ b/indexcss.css
@@ -151,26 +151,26 @@ ul.lead-list li {
 }
 
 ul.lead-list li span.fa {
-    display: inline-block;
-    margin: 5px 5px 0 0;
-    /* float: left; */
+    display:block;
+    margin: 8px 5px 0 0;
+    float: left;
 }
 
 ul.lead-list li span.list {
     /* border:1px solid red; */
             display: inline;
-            margin: 0 0 0 10px;
+            margin: 0 0 14px;
         }
 
 
 
 .intro-left-img {
     width:100%;
-    height: 100%;
+    height:100%;
     /* margin-top:50px; */
     /* border: 1px solid red; */
     display: flex;
-    /* align-items:center; */
+    align-items:center;
 }
 .intro-left-img img{
     margin:10px auto;
