--- a/teamcss.css
+++ b/teamcss.css
@@ -85,7 +85,9 @@ a {
 
 
 
-
+.carousel-item{
+border: 1px solid green;
+}
 /* caurosel  of team */
 .title-banner-all {
     background-repeat: no-repeat;
@@ -97,16 +99,19 @@ a {
     overflow: hidden;
     padding: 0;
     z-index: 9;
-    min-height: 100vh;
+    /* border:3px solid red; */
+    min-height: 850px;
 }
 .p{
     color:red;
     font: outline;
 }
 .title-banner1 {
-    background-image: url('IMAGES/15-banner1024x586.jpg');
+    background-image: url('IMAGES/AKRSP-2-e1507997433656.jpg');
     color: #fff;
     border: red;
+    min-height: 650px;
+
 }
 .title-banner2 {
     background-image: url('IMAGES/GADC1.png');
@@ -127,16 +132,17 @@ a {
 /*caurosel ends*/
 .title-banner122 {
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    /* background-size: 100% 100%; */
     min-width: 100%;
     position: relative;
     overflow: hidden;
     padding: 0;
     z-index: 9;
-    min-height: 100vh;
+    min-height: 650px;
 }
-.title-banner-part1 {
-    /*margin-top:80px;*/
+.title-banner1{
+    /* margin-top:80px; */
+    /* border: 1px solid red; */
     color: #fff;
 }
 
@@ -158,27 +164,36 @@ a {
     padding: 20px 30px;
     padding-right: 15%;
     font-family: AvantGarde-Demi;
+    margin-top: 130px;
 }
 
 
-    .tilte-banner-part1-right p {
+    .tilte-banner-part1-right h1,
+        .tilte-banner-part1-right p {
+        /* margin-top: 30px; */
         margin-top: 30px;
+        color:#fff;
+        
     }
-
     
+    .tilte-banner-part1-right p {
+        padding: 30px;
+    
+    }    
 
 .simple-header {
     position: relative;
     overflow: hidden;
     padding: 0;
-    min-height: 430px;
+    min-height: 650px;
 }
 
     .simple-header.add-slash:after {
         content: "";
         position: absolute;
         width: 100%;
-        height: 430px;
+/* border: 11px solid green; */
+        height: 650px;
         top: 0;
         z-index: 99;
         background-image: linear-gradient(-106deg,rgba(0,0,0,.5)  calc((1140px / 1.7) + ((100vw - 1180px)/ 2)),transparent 0);
