--- a/css/media.css
+++ b/css/media.css
@@ -55,6 +55,43 @@
     background-image: linear-gradient(0deg ,rgba(55, 93, 151, 0.774) 10%,rgba(0,0,0,.5) 30%, transparent 40% 100%);
 }
 
+
+.title-banner1 {
+    background-image: url('../IMAGES/img-full\ \(3\).jpg');
+
+}
+
+.title-banner3 {
+    background-image: url('../IMAGES/women-mobile.jpg');
+
+}
+
+.tilte-banner-part1-right {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    
+   
+}
+
+.simple-header {
+    position: relative;
+    overflow: hidden;
+    padding: 0;
+    height: 60vh;
+    /* min-height: 150px; */
+}
+.simple-header.add-slash:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    
+    height: 100%;
+    top: 0;
+    z-index: 99;
+    background-image: linear-gradient(-106deg, rgba(0, 0, 0, 0.4), calc((1140px / 1.7) + ((100vw - 1180px)/ 2)), transparent 0);
+}
+
+
 .feature-text-right{
     left:0;
     top:60%;
