--- a/css/liquid-style.css
+++ b/css/liquid-style.css
@@ -1885,6 +1885,8 @@ color:#fff !important;
     color: #fff;
     border: 1px solid gray;
     display: block;
+    box-shadow: 1px 3px 3px #444;
+
     /* border-radius: 50%; */
     width: 50px;
     height: 50px;
